fix card text overflow

--- a/reelfeels/static/styles/index.css
+++ b/reelfeels/static/styles/index.css
@@ -35,6 +35,10 @@ img.emoticon{
 	width: auto;
 }
 
+.card .card-body{
+	overflow: scroll;
+}
+
 
 /* HEADER */
 .navbar-brand{
